# aire

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: controls.rs  sine.rs  streaming.rs
src/: engine.rs  error.rs  handle.rs  lib.rs  mixer.rs  sound.rs
src/dsp/: adsr.rs  effect.rs  mod.rs
src/source/: file.rs  mod.rs  oscillator.rs
src/streaming/: decoder.rs  mod.rs  pool.rs
src/utils/: mod.rs
