[package]
name = "aire"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A real-time audio engine for games and interactive applications."
repository = "https://github.com/Breijen/aire"
readme = "README.md"
keywords = ["audio", "game", "sound", "engine", "music"]
categories = ["multimedia::audio", "game-engines"]

[dependencies]
claxon = "0.4.3"
cpal = "0.17.3"
crossbeam-channel = "0.5.15"
hound = "3.5.1"
lewton = "0.10.2"
nanomp3 = "0.1.1"
ringbuf = "0.5.0"
rubato = "3.0.0"

[[example]]
name = "sine"

[[example]]
name = "controls"

[[example]]
name = "streaming"
